# AutoBol

./: .gitignore  README.md  requirements.txt  setup.cfg
code/: abio.py  algoritmos.py  autobol.py  functions.py  main.py  main2.py  model_0.114.txt
data/: Bolidos.csv  Model_XGBoost.json  README.md  aviones.csv  data.csv
salida/: Predicciones.csv
