[metadata]
name = autobol
version = 1.0
author = Juan Pedro Ballestrino, Cecilia Deandraya and Cristian Uviedo
author_email = author@example.com
description = Automatic detection of meteors in video clips
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpballestrino/autobol
project_urls =
    Bug Tracker = https://github.com/jpballestrino/autobol/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License V 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = code
packages = find:
python_requires = >=3.6

[options.packages.find]
where = code
